# graphathon-snippets

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
data/: employees.csv
examples/mcp/: README.md  requirements.txt  test_environment.py
examples/mcp/client/: list_resources.py  list_tools.py  main.py
examples/mcp/server/: main.py
examples/neo4j-driver/: README.md  connect.py  create_data.py  export_to_dataframe.py  requirements.txt  run_cypher.py  test_environment.py  transaction.py
notebooks/: 2_gds-client-fastrp.ipynb  README.md  bigquery-to-neo4j-data-import.ipynb  neo4j-python-driver-examples.ipynb  text-to-knowledge-graph.ipynb
notebooks/gds/: 1_gds-client-leiden.ipynb  3_gds-client-algorithm-bank.ipynb
